# MagnitSiteParser

./: main.py  pyproject.toml
