[tool.poetry]
name = "magnitparser"
version = "0.1.0"
description = ""
authors = ["Konstantin <k1st.volkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
bs4 = "^0.0.1"
lxml = "^4.9.2"
fake-useragent = "^1.1.1"
asyncio = "^3.4.3"
aiogram = "^2.23.1"
aiofiles = "^22.1.0"
aiocsv = "^1.2.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
